# tibia-boss-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY.md  Dockerfile  MCP_IMPLEMENTATION_GUIDE.md  MCP_USAGE_REPORT.md  README.md  ROUTES.md  SPRINT_1.md  SPRINT_2.md  SPRINT_3.md  SPRINT_4.md  audit_bosses.py  check_db_visuals.py  debug_network.py  debug_remote_boss.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_pydantic_dump.py
.github/workflows/: ci.yml
app/: __init__.py  main.py  main_scraper.py
app/api/v1/routers/: admin.py  bosses.py  health.py
app/core/: __init__.py  config.py  database.py  rate_limit.py
app/db/: __init__.py  connection.py  repository.py  system_jobs.py
app/models/: __init__.py  boss.py
app/schemas/: __init__.py  boss.py  response.py
app/services/: __init__.py  image_resolver.py  scraper_job.py  tibiawiki_client.py  wikitext_parser.py
app/utils/: __init__.py  dead_letter_logger.py
docs/: sprint-extra-war-room.md
scripts/: test_dead_letter_logger.py  test_main_scraper.py  test_parser_logic.py  test_repository.py  test_tibiawiki_client.py  verify_expansion.py
tests/: __init__.py  test_boss_model.py  test_bosses_endpoint.py  test_dead_letter_logger.py  test_image_resolver.py  test_repository.py  test_system_jobs_lock.py  test_tibiawiki_client.py  test_wikitext_parser.py
